feat: 공통 API 응답 Dto 추가
- 성공/실패 응답 형식 통일